[package]
authors = ["Paul Colomiets <paul@colomiets.name>"]
categories = ["parser-implementations", "command-line-interface"]
description = """
    A parser, AST and serializer for graphql query language and scheme
    definition language (sometimes called IDL).
"""
documentation = "https://docs.rs/graphql-parser"
edition = "2018"
homepage = "https://github.com/graphql-rust/graphql-parser"
keywords = ["graphql", "parser"]
license = "MIT/Apache-2.0"
name = "graphql-parser"
readme = "README.md"
version = "0.3.0"

[dependencies]
combine = "3.2.0"
indexmap = "1.5"
thiserror = "1.0.11"

[dev-dependencies]
pretty_assertions = "0.5.0"
